--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.6",
     "embla-carousel-react": "^7.0.3",
+    "framer-motion": "^10.12.11",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
