add PostPage responsive design

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "framer-motion": "^10.12.11",
     "next": "13.2.4",
     "next-contentlayer": "^0.3.2",
+    "next-share": "^0.20.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reading-time": "^1.5.0",
