--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@next/bundle-analyzer": "^13.1.6",
     "@tabler/icons": "^1.107.0",
     "@tabler/icons-react": "^2.4.0",
+    "@vercel/analytics": "^1.0.1",
     "contentlayer": "^0.3.2",
     "cookies-next": "^2.1.1",
     "date-fns": "^2.30.0",
